--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "description": "Manage sequences of arbitrary data with revisions",
   "main": "./src/index.js",
-  "dependencies": {},
+  "dependencies": {
+    "hat": "^0.0.3"
+  },
   "devDependencies": {
     "babel": "^5.6.14",
     "eslint": "^0.24.0",
