--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Manage sequences of arbitrary data with revisions",
   "main": "./src/index.js",
   "dependencies": {
-    "hat": "^0.0.3"
+    "sha-1": "^0.1.1"
   },
   "devDependencies": {
     "babel": "^5.6.14",
