--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
   },
   "devDependencies": {
     "babel": "^5.6.14",
-    "eslint": "^0.24.0",
-    "babel-eslint": "^3.1.20",
+    "jshint": "^2.8.0",
     "gulp": "^3.9.0",
-    "gulp-eslint": "^0.15.0",
+    "gulp-jshint": "^1.11.2",
     "mocha": "^2.2.1",
     "chai": "^2.2.0"
   },
