--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Manage sequences of arbitrary data with revisions",
   "main": "./lib/index.js",
   "dependencies": {
-    "sha-1": "^0.1.1"
+    "uuid": "^2.0.1"
   },
   "devDependencies": {
     "babel": "^5.6.14",
